# Hg_hri

./: README.md
byp80/msg/: ByStatus.msg
byp80/scripts/: listener.py
byp80/src/: byp80_test.cpp
camera_wrapper/: CMakeLists.txt
camera_wrapper/calibration_data/: cal.yaml  usb_cam.yml
camera_wrapper/launch/: human.launch
camera_wrapper/src/: multi_view.cpp
fr3_description/: CMakeLists.txt  package.xml
fr3_description/launch/: fr3robot_rviz.launch
fr3_description/urdf/: fr3_gazebo.urdf  fr3_robot.urdf
fr3_moveit_config/: package.xml
fr3_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  planning_context.launch
hg_hri/: CMakeLists.txt  package.xml
hg_hri/cam_data/: cam.yml  hg.yml  rs.yml
hg_hri/data/task1/: pos.csv  speed.csv
hg_hri/data/task2/: pos.csv  speed.csv
hg_hri/data/task3/: pos.csv  speed.csv
hg_hri/include/hg_hri/: Detect.h  FR3_common.h  FR3_points.h  FR3_robot.h  Gripper.h  HumanInfo.h  Points.h  Robot.h  common.h
hg_hri/msg/: Human.msg  robot2global.msg
hg_hri/src/: Detect.cpp  Gripper.cpp  HumanInfo.cpp  Points.cpp  Robot.cpp  detect_thread.cpp  human_thread.cpp  points_thread.cpp  robot_thread.cpp
hg_hri/src/fr3/: FR3_points.cpp  FR3_points_thread.cpp  FR3_robot.cpp  FR3_robot_thread.cpp  fr3_test.cpp  fr3_test2.cpp  fr3_test3.cpp  main.cpp  record_trac.cpp
hg_hri/srv/: point2robot.srv
ros_control_boilerplate/: CMakeLists.txt
ros_control_boilerplate/frrobot_control/launch/: frrobot_hardware.launch  frrobot_simulation.launch
ros_control_boilerplate/frrobot_control/src/: frrobot_hw_interface.cpp
src/byp80/: CMakeLists.txt  package.xml
src/byp80/camera_wrapper/: solution_20180814
src/byp80/camera_wrapper/calibration_data/: READNE.md  calib_color.yaml  kinect_1.yml  kinect_2.yml  realsence.yml  solution_20180814
src/byp80/camera_wrapper/calibration_data/010956740447/: solution_20180814
src/byp80/camera_wrapper/rviz/: hri.rviz
src/byp80/launch/: byp80.launch
src/byp80/scripts/: byGripper.py  byGripper_bkp.py  byStatus.py  client.py
src/byp80/srv/: GetStatus.srv  MoveTo.srv
